# routes/carRoutes.js
@@ -6,6 +6,7 @@ const {
   createCar,
   updateCar,
   deleteCar,
+  searchCars,
 } = require("../services/carsService");
 const { protect, restrictTo } = require("../middlewares/authMiddleware");
 
@@ -13,6 +14,8 @@ router
   .route("/")
   .get(protect, restrictTo("admin"), getAllCars)
   .post(protect, restrictTo("admin"), createCar);
+
+router.route("/search").get(protect, restrictTo("admin"), searchCars);
 
 router
   .route("/:id")
